# SFFTests

./: .gitignore  CMakeLists.txt  README.md  ReadSFF.cpp
SFF/: Pal.cpp  Pal.hpp  SFFv2.cpp  SFFv2.hpp
docs/: SFFv2.htm
